force-app/main/default/objects/CaseChild__c/CaseChild__c.object-meta.xml
<CustomObject>
    <label>CaseChild</label>
    <nameField>
        <label>CaseChild Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CaseChilds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>