force-app/main/default/objects/CaseChild__c/fields/DateTimeFieldTest__c.field-meta.xml
<CustomField>
    <fullName>DateTimeFieldTest__c</fullName>
    <label>DateTimeFieldTest</label>
    <type>DateTime</type>
</CustomField>