force-app/main/default/objects/CaseChild__c/fields/FormulaFieldTest__c.field-meta.xml
<CustomField>
    <fullName>FormulaFieldTest__c</fullName>
    <formula>&apos;123&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormulaFieldTest</label>
    <type>Text</type>
</CustomField>