force-app/main/default/objects/CaseChild__c/fields/LastModifiedByTech__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedByTech__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LastModifiedByTech</label>
    <referenceTo>User</referenceTo>
    <relationshipName>lastModifiedByTech</relationshipName>
    <type>Lookup</type>
</CustomField>