force-app/main/default/objects/CaseChild__c/fields/LastModifiedDateTech__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDateTech__c</fullName>
    <label>LastModifiedDateTech</label>
    <type>DateTime</type>
</CustomField>