force-app/main/default/objects/CaseChild__c/fields/NumberFieldTest__c.field-meta.xml
<CustomField>
    <fullName>NumberFieldTest__c</fullName>
    <label>NumberFieldTest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>