force-app/main/default/objects/CaseChild__c/fields/TestFieldTest__c.field-meta.xml
<CustomField>
    <fullName>TestFieldTest__c</fullName>
    <label>TestFieldTest</label>
    <length>250</length>
    <type>Text</type>
</CustomField>